# LogProcessApp

src/: CMakeLists.txt  Doxyfile.in  README.md
src/application/: CMakeLists.txt  LogProcessor.cpp  LogProcessor.h  README.md
